@@ -1,3 +1,7 @@
+2004-12-23  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/tree/TreeCellEditor.java: Refomatted.
+
 2004-12-23  Jeroen Frijters  <jeroen@frijters.net>
 
 	* java/awt/color/ICC_Profile.java
